# musical-project

./: .gitmodules  CMakeLists.txt  LIBTORCH_PATH  LICENSE  README.md  build.sh  create.py  data-to-midi.py  generate.py  legacy-generate.py  legacy-setup-bach-dataset.py  legacy-setup-large-dataset.py  legacy-train.py  midi-to-data.py  midi_utils.py  model.py  model_utils.py  musical_dataset.py  musical_model.py  patch-migrate-kappa-to-kappa-ii.py  requirements.txt  setup-bach-dataset.py  setup-data.py  setup-dataset.py  train-gamma-model.py  train-kappa-model-on-agamemnon.py  train-kappa-model.py  train-zeta-model-ii.py  train-zeta-model.py  train.py
mupo/: __init__.py  alpha_model.py  beta_dataset.py  beta_model.py  conversion.py  epsilon_model.py  fallback_model.py  gamma_dataset.py  gamma_model.py  hyper_model.py  kappa_dataset.py  kappa_model.py  lambda_dataset.py  lambda_model.py  lambda_model_ii.py  model.py  mu.py  mu_model.py  nu.py  omicron.py  pi.py  pi_ii.py  scaled_mae_loss.py  sequence_dataset.py  sequence_model.py  train.py  utils.py  zeta_dataset.py  zeta_model.py  zeta_model_ii.py
mupo/tau/: decoder.py  model.py
saves/: cut-generated.mscz  log for function-approximation (sin(x)).txt
saves/archive/: train-beta-model.py  train-epsilon-model.py
saves/archive/first/: long.mid
saves/archive/good/: single-start-generated.mid  single-start.mid
saves/first/: cut-generated.mid  musical_model.py
saves/good/: bach-bwv846-869_the_well_tempered_clavier_book_1-wt1_4b.mid
saves/piece/: output-25-04-19-01-25.mid  output-25-04-19-01-28.mid  output-25-04-19-02-07.mid  output-25-04-20-22-56.mid  output-25-04-21-10-49.mid  output-25-04-22-17-07.mid  output-25-04-28-11-47.mid  output-25-04-28-11-53.mid  output-25-04-28-12-10.mid  output-25-04-28-12-44.mid  output-25-04-28-12-46.mid  output-from-agamemnon-25-04-22--16-42.mid  output-from-agamemnon-25-04-22-15-40.mid  output-from-agamemnon-25-04-22-15-43.mid  output-from-agamemnon-25-04-22-15-49.mid
source/: main.cpp  midi_to_raw.cpp  time_unit.h
workspace/piece/: langer-anfang-fuge-in-a-moll.mid  one-note-piece.mid  wtkii-18a.mid
